# phonebook

./:  clean.bat  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.txt  build.bat  fix_qt.bat
phonebook/: CMakeLists.txt  CMakeUserPresets.json  README.txt  build.bat  fix_qt.bat  full_build.bat  launch.bat
phonebook/src/: main.cpp  mainwindow.cpp  mainwindow.h  phonebook.cpp  phonebook.h  searchdialog.cpp
src/: contact.cpp  contact.h  main.cpp  mainwindow.cpp  mainwindow.h  phonebook.cpp  phonebook.h  searchdialog.cpp  searchdialog.h
